<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="31dp"
        android:freezesText="true"
        android:text="@string/question_number"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/tvQuestion"
        app:layout_constraintEnd_toEndOf="@+id/tvQuestion"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:freezesText="true"
        android:text="@string/score"
        android:textColor="@color/textColor"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvQuestionNumber"
        app:layout_constraintStart_toStartOf="@+id/tvQuestion" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="0dp"
        android:layout_height="182dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:freezesText="true"
        android:text="@string/question"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgAnswers"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

        <RadioButton
            android:id="@+id/rbFirstAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:freezesText="true"
            android:textColor="@color/textColor"
            tools:text="@string/first_answer" />

        <RadioButton
            android:id="@+id/rbSecondAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:freezesText="true"
            android:text="@string/second_answer"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/rbThirdAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:freezesText="true"
            android:text="@string/third_answer"
            android:textColor="@color/textColor" />

    </RadioGroup>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape"
        android:elevation="4dp"
        android:freezesText="true"
        android:text="@string/button_confirm"
        android:textColor="@color/backgroundColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgAnswers"
        app:layout_constraintVertical_bias="0.763" />

</android.support.constraint.ConstraintLayout>